plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'org.jetbrains.kotlin.jvm'
}

group = 'com.green'
version = '0.0.1-SNAPSHOT'
// ✅ Java 17로 변경

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Validation support for DTOs and request parameters
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Jakarta EE로 변경 (javax → jakarta)
    implementation 'org.glassfish.web:jakarta.servlet.jsp.jstl:3.0.1'
    implementation 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api:3.0.0'

    // Switch from MyBatis to Spring Data JPA
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Spring Security (crypto 포함)
    // implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.security:spring-security-crypto'
    // Web starter
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // MyBatis Spring Boot 3.x 호환 버전
    implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.3'

    // MySQL driver
    runtimeOnly 'com.mysql:mysql-connector-j'

    // Spring Security (crypto 포함)
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Web starter
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Hot reload in development
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // ✅ JWT 최신 버전
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    // WebSocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // Testing dependencies
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}

tasks.named('test') {
    useJUnitPlatform()
}
kotlin {
    jvmToolchain(17)
}